--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "@medusajs/medusa-js": "^6.1.8",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.11.2",
+    "nuxt-snackbar": "^1.0.4",
+    "nuxt-swiper": "^1.2.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "yup": "^1.4.0"
   }
 }
