--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@medusa-vue/core": "^0.4.2",
     "@medusajs/medusa-js": "^6.1.8",
     "@nuxt/image": "^1.6.0",
+    "@nuxt/image-edge": "1.3.0-28493895.369b747",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
