--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@nuxt/image": "^1.6.0",
     "@nuxt/image-edge": "1.3.0-28493895.369b747",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@pinia/nuxt": "^0.5.1",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.11.2",
     "nuxt-snackbar": "^1.0.4",
     "nuxt-swiper": "^1.2.2",
+    "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "yup": "^1.4.0"
