--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "investore-ui",
   "private": true,
   "type": "module",
   "scripts": {
@@ -7,10 +7,10 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "start": "node .output/server/index.mjs --host=0.0.0.0"
   },
   "dependencies": {
-    "@medusa-vue/core": "^0.4.2",
     "@medusajs/medusa-js": "^6.1.8",
     "@nuxt/image": "^1.6.0",
     "@nuxt/image-edge": "1.3.0-28493895.369b747",
@@ -19,6 +19,7 @@
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.11.2",
+    "nuxt-proxy": "^0.4.1",
     "nuxt-snackbar": "^1.0.4",
     "nuxt-swiper": "^1.2.2",
     "pinia": "^2.1.7",
