--- a/.github/workflows/liara.yaml
+++ b/.github/workflows/liara.yaml
@@ -24,8 +24,8 @@ jobs:
         env:
           LIARA_TOKEN: ${{ secrets.LIARA_API_TOKEN }}
         run: |
-          if [ ${{ github.ref }} == 'refs/heads/master' ]; then
-            liara deploy --app="my-production-app" --api-token="$LIARA_TOKEN" --no-app-logs
+          if [ ${{ github.ref }} == 'refs/heads/main' ]; then
+            liara deploy --app="investore_ui" --api-token="$LIARA_TOKEN" --no-app-logs
           elif [ ${{ github.ref }} == 'refs/heads/test' ]; then
             liara deploy --app="my-test-app" --api-token="$LIARA_TOKEN" --no-app-logs
           elif [ ${{ github.ref }} == 'refs/heads/staging' ]; then
